added last updates from prod.env

--- a/files for admin/CMS Pages/content/cookie-policy.html
+++ b/files for admin/CMS Pages/content/cookie-policy.html
@@ -12,7 +12,7 @@
             This Cookie Policy explains how Arthur Potul'nyj Private Entrepreneur ("Company," "we," "us," and "our")
             uses cookies and similar technologies to recognize you when you visit our website at
             <a href="https://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com</a> ("Website"). It
-            explains what these technologies are and why we use them, as well
+            explains what these technologies are and why we use them, as well as your rights to control our use of them.
           </h2>
           <br />
           <h3 class="h4">
@@ -1289,7 +1289,7 @@
               </li>
               <li>
                 <div>Expires in:</div>
-                <div>Germany</div>
+                <div>session</div>
               </li>
             </ul>
 
@@ -1402,31 +1402,38 @@
             </p>
             <ul class="_list">
               <li>
-                <a href="https://support.google.com/chrome/answer/95647#zippy=%2Callow-or-block-cookies">Chrome</a>
+                <a
+                  href="https://support.google.com/chrome/answer/95647#zippy=%2Callow-or-block-cookies"
+                  class="_text-orange"
+                  >Chrome</a
+                >
               </li>
               <li>
                 <a
                   href="https://support.microsoft.com/en-us/windows/delete-and-manage-cookies-168dab11-0753-043d-7c16-ede5947fc64d"
+                  class="_text-orange"
                   >Internet Explorer</a
                 >
               </li>
               <li>
                 <a
                   href="https://support.mozilla.org/en-US/kb/enhanced-tracking-protection-firefox-desktop?redirectslug=enable-and-disable-cookies-website-preferences&redirectlocale=en-US"
+                  class="_text-orange"
                   >Firefox</a
                 >
               </li>
               <li>
-                <a href="https://support.apple.com/en-ie/guide/safari/sfri11471/mac">Safari</a>
+                <a href="https://support.apple.com/en-ie/guide/safari/sfri11471/mac" class="_text-orange">Safari</a>
               </li>
               <li>
                 <a
                   href="https://support.microsoft.com/en-us/windows/microsoft-edge-browsing-data-and-privacy-bb8174ba-9d73-dcf2-9b4a-c582b4e640dd"
+                  class="_text-orange"
                   >Edge</a
                 >
               </li>
               <li>
-                <a href="https://help.opera.com/en/latest/web-preferences/">Opera</a>
+                <a href="https://help.opera.com/en/latest/web-preferences/" class="_text-orange">Opera</a>
               </li>
             </ul>
 
@@ -1437,13 +1444,17 @@
 
             <ul class="_list">
               <li>
-                <a href="https://optout.aboutads.info/?c=2&lang=EN">Digital Advertising Alliance</a>
+                <a href="https://optout.aboutads.info/?c=2&lang=EN" class="_text-orange"
+                  >Digital Advertising Alliance</a
+                >
               </li>
               <li>
-                <a href="https://youradchoices.ca/">Digital Advertising Alliance of Canada</a>
+                <a href="https://youradchoices.ca/" class="_text-orange">Digital Advertising Alliance of Canada</a>
               </li>
               <li>
-                <a href="https://www.youronlinechoices.com/">European Interactive Digital Advertising Alliance</a>
+                <a href="https://www.youronlinechoices.com/" class="_text-orange"
+                  >European Interactive Digital Advertising Alliance</a
+                >
               </li>
             </ul>
           </section>
