--- a/files for admin/CMS Pages/content/privacy-policy.html
+++ b/files for admin/CMS Pages/content/privacy-policy.html
@@ -127,7 +127,8 @@
             </p>
 
             <p class="_text-article">
-              Want to learn more about what Perspective does with any information we collect? Click <a href=""></a> here
+              Want to learn more about what Perspective does with any information we collect? Click
+              <a href="https://app.termly.io/user/login" class="_text-orange"> here</a>
               to review the notice in full.
             </p>
           </section>
@@ -138,77 +139,89 @@
             <ol class="_list-numbered">
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-1" class="">WHAT INFORMATION DO WE COLLECT? </a>
+                  <a style="color: inherit" href="#section-1" class="">WHAT INFORMATION DO WE COLLECT? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-2" class="">HOW DO WE PROCESS YOUR INFORMATION? </a>
+                  <a style="color: inherit" href="#section-2" class="">HOW DO WE PROCESS YOUR INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-3" class="">WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION? </a>
+                  <a style="color: inherit" href="#section-3" class=""
+                    >WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION?
+                  </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-4" class="">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION? </a>
+                  <a style="color: inherit" href="#section-4" class=""
+                    >WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?
+                  </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-5" class="">DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES? </a>
+                  <a style="color: inherit" href="#section-5" class=""
+                    >DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?
+                  </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-6" class="">IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY? </a>
+                  <a style="color: inherit" href="#section-6" class=""
+                    >IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?
+                  </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-7" class="">HOW LONG DO WE KEEP YOUR INFORMATION? </a>
+                  <a style="color: inherit" href="#section-7" class="">HOW LONG DO WE KEEP YOUR INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-8" class="">HOW DO WE KEEP YOUR INFORMATION SAFE? </a>
+                  <a style="color: inherit" href="#section-8" class="">HOW DO WE KEEP YOUR INFORMATION SAFE? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-9" class="">DO WE COLLECT INFORMATION FROM MINORS? </a>
+                  <a style="color: inherit" href="#section-9" class="">DO WE COLLECT INFORMATION FROM MINORS? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-10" class="">WHAT ARE YOUR PRIVACY RIGHTS?</a>
+                  <a style="color: inherit" href="#section-10" class="">WHAT ARE YOUR PRIVACY RIGHTS?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-11" class="">CONTROLS FOR DO-NOT-TRACK FEATURES</a>
+                  <a style="color: inherit" href="#section-11" class="">CONTROLS FOR DO-NOT-TRACK FEATURES</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-12" class="">DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
+                  <a style="color: inherit" href="#section-12" class=""
+                    >DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a
+                  >
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-13" class="">DO WE MAKE UPDATES TO THIS NOTICE?</a>
+                  <a style="color: inherit" href="#section-13" class="">DO WE MAKE UPDATES TO THIS NOTICE?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-14" class="">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a>
+                  <a style="color: inherit" href="#section-14" class="">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-15" class="">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a>
+                  <a style="color: inherit" href="#section-15" class=""
+                    >HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a
+                  >
                 </p>
               </li>
             </ol>
@@ -219,6 +232,9 @@
             <h4 id="section-1" class="privacy-content__title content-title font-semibold h4">
               1. WHAT INFORMATION DO WE COLLECT?
             </h4>
+            <p class="_text-article">
+              <span class="font-semibold">Personal information you disclose to us</span>
+            </p>
             <p class="_text-article">
               <span class="font-semibold">In Short:</span>
               We collect personal information that you provide to us.
@@ -330,9 +346,10 @@
 
             <ul class="_list">
               <li>
-                <strong class="font-semibold">Consent</strong>We may process your information if you have given us
+                <strong class="font-semibold">Consent. </strong>We may process your information if you have given us
                 permission (i.e., consent) to use your personal information for a specific purpose. You can withdraw
-                your consent at any time. Click here to learn more.
+                your consent at any time. Click
+                <a href="https://app.termly.io/user/login" class="_text-orange"> here</a> to learn more.
               </li>
               <li>
                 <strong class="font-semibold">Performance of a Contract. </strong>We may process your personal
@@ -370,7 +387,8 @@
             <p class="_text-article">
               We may process your information if you have given us specific permission (i.e., express consent) to use
               your personal information for a specific purpose, or in situations where your permission can be inferred
-              (i.e., implied consent). You can withdraw your consent at any time. Click here to learn more.
+              (i.e., implied consent). You can withdraw your consent at any time. Click
+              <a href="https://app.termly.io/user/login" class="_text-orange"> here</a> to learn more.
             </p>
 
             <p class="text-article">
@@ -449,7 +467,7 @@
 
             <ul class="_list">
               <li>
-                <strong class="font-semibold">Business Transfers.</strong>We may share or transfer your information in
+                <strong class="font-semibold">Business Transfers. </strong>We may share or transfer your information in
                 connection with, or during negotiations of, any merger, sale of company assets, financing, or
                 acquisition of all or a portion of our business to another company.
               </li>
@@ -579,7 +597,7 @@
               18 years of age has been collected, we will deactivate the account and take reasonable measures to
               promptly delete such data from our records. If you become aware of any data we may have collected from
               children under age 18, please contact us at
-              <a href="mailto:order@perspectiveteam.com" class="text-orange">order@perspectiveteam.com</a>.
+              <a href="mailto:order@perspectiveteam.com" class="_text-orange">order@perspectiveteam.com</a>.
             </p>
           </section>
 
@@ -625,7 +643,7 @@
             <p class="_text-article">
               If you are located in Switzerland, the contact details for the data protection authorities are available
               here:
-              <a style="word-break: break-all;" href="https://www.edoeb.admin.ch/edoeb/en/home.html" class="_text-orange"
+              <a style="word-break: break-all" href="https://www.edoeb.admin.ch/edoeb/en/home.html" class="_text-orange"
                 >https://www.edoeb.admin.ch/edoeb/en/home.html</a
               >
               .
@@ -662,7 +680,7 @@
             </p>
             <p class="_text-article">
               If you have questions or comments about your privacy rights, you may email us at
-              <a href="mailto:order@perspectiveteam.com" class="_text-orange">order@perspectiveteam.com</a> /
+              <a href="mailto:order@perspectiveteam.com" class="_text-orange">order@perspectiveteam.com</a>.
             </p>
           </section>
 
