--- a/files for admin/CMS Pages/content/terms-of-use.html
+++ b/files for admin/CMS Pages/content/terms-of-use.html
@@ -14,117 +14,119 @@
             <ol class="_list-numbered">
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-1" class="">AGREEMENT TO TERMS </a>
+                  <a style="color: inherit" href="#section-1" class="">AGREEMENT TO TERMS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-2" class="">INTELLECTUAL PROPERTY RIGHTS </a>
+                  <a style="color: inherit" href="#section-2" class="">INTELLECTUAL PROPERTY RIGHTS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-3" class="">USER REPRESENTATIONS </a>
+                  <a style="color: inherit" href="#section-3" class="">USER REPRESENTATIONS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-4" class="">PROHIBITED ACTIVITIES </a>
+                  <a style="color: inherit" href="#section-4" class="">PROHIBITED ACTIVITIES </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-5" class="">USER GENERATED CONTRIBUTIONS </a>
+                  <a style="color: inherit" href="#section-5" class="">USER GENERATED CONTRIBUTIONS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-6" class="">CONTRIBUTION LICENSE </a>
+                  <a style="color: inherit" href="#section-6" class="">CONTRIBUTION LICENSE </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-7" class="">SUBMISSIONS </a>
+                  <a style="color: inherit" href="#section-7" class="">SUBMISSIONS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-8" class="">THIRD-PARTY WEBSITE AND CONTENT </a>
+                  <a style="color: inherit" href="#section-8" class="">THIRD-PARTY WEBSITE AND CONTENT </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-9" class="">SITE MANAGEMENT </a>
+                  <a style="color: inherit" href="#section-9" class="">SITE MANAGEMENT </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-10" class="">PRIVACY POLICY </a>
+                  <a style="color: inherit" href="#section-10" class="">PRIVACY POLICY </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-11" class="">TERM AND TERMINATION </a>
+                  <a style="color: inherit" href="#section-11" class="">TERM AND TERMINATION </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-12" class="">MODIFICATIONS AND INTERRUPTIONS </a>
+                  <a style="color: inherit" href="#section-12" class="">MODIFICATIONS AND INTERRUPTIONS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-13" class="">GOVERNING LAW </a>
+                  <a style="color: inherit" href="#section-13" class="">GOVERNING LAW </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-14" class="">DISPUTE RESOLUTION </a>
+                  <a style="color: inherit" href="#section-14" class="">DISPUTE RESOLUTION </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-15" class="">CORRECTIONS </a>
+                  <a style="color: inherit" href="#section-15" class="">CORRECTIONS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-16" class="">DISCLAIMER </a>
+                  <a style="color: inherit" href="#section-16" class="">DISCLAIMER </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-17" class="">LIMITATIONS OF LIABILITY </a>
+                  <a style="color: inherit" href="#section-17" class="">LIMITATIONS OF LIABILITY </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-18" class="">INDEMNIFICATION </a>
+                  <a style="color: inherit" href="#section-18" class="">INDEMNIFICATION </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-19" class="">USER DATA </a>
+                  <a style="color: inherit" href="#section-19" class="">USER DATA </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-20" class="">ELECTRONIC COMMUNICATIONS, TRANSACTIONS, AND SIGNATURES </a>
+                  <a style="color: inherit" href="#section-20" class=""
+                    >ELECTRONIC COMMUNICATIONS, TRANSACTIONS, AND SIGNATURES
+                  </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-21" class="">CALIFORNIA USERS AND RESIDENTS </a>
+                  <a style="color: inherit" href="#section-21" class="">CALIFORNIA USERS AND RESIDENTS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-22" class="">MISCELLANEOUS </a>
+                  <a style="color: inherit" href="#section-22" class="">MISCELLANEOUS </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a style="color:inherit" href="#section-23" class="">CONTACT US </a>
+                  <a style="color: inherit" href="#section-23" class="">CONTACT US </a>
                 </p>
               </li>
             </ol>
