fixes collapsible elements styles on ga4 service page

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -406,13 +406,14 @@
         Google Analytics 4 to comprehensively view your online presence and drive growth.
       </p>
       <!-- ======================= -->
-      <div class="article__dropdowns-block" x-data="{selected:null}">
+      <div class="article__dropdowns-block" x-data="{selected:null}" style="display: grid; grid-auto-rows: 1fr">
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 1 }"
           @click="selected !== 1 ? selected = 1 : selected = null"
         >
-          <p>Utilize Magento 2 and GA4 for smart insights to improve your marketing strategy</p>
+          <h5>Utilize Magento 2 and GA4 for smart insights to improve your marketing strategy</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container1" x-show="selected == 1">
           <p>
@@ -432,10 +433,11 @@
         </div>
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 2 }"
           @click="selected !== 2 ? selected = 2 : selected = null"
         >
-          <p>Track your customer's journey and behavior with GA4 integration on Magento 2</p>
+          <h5>Track your customer's journey and behavior with GA4 integration on Magento 2</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container2" x-show="selected == 2">
           <p>
@@ -455,12 +457,13 @@
         </div>
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 3 }"
           @click="selected !== 3 ? selected = 3 : selected = null"
         >
-          <p>
+          <h5>
             Understand user behavior more deeply through time-based event tracking with GA4 integration on Magento 2
-          </p>
+          </h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container3" x-show="selected == 3">
           <p>
@@ -482,10 +485,11 @@
         </div>
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 4 }"
           @click="selected !== 4 ? selected = 4 : selected = null"
         >
-          <p>Take retargeting to the next level with GA4's advanced capabilities on Magento 2</p>
+          <h5>Take retargeting to the next level with GA4's advanced capabilities on Magento 2</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container4" x-show="selected == 4">
           <p>
@@ -507,11 +511,11 @@
         </div>
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 5 }"
           @click="selected !== 5 ? selected = 5 : selected = null"
-          w
         >
-          <p>Monitor and analyze user acquisition with GA4 reports on Magento 2</p>
+          <h5>Monitor and analyze user acquisition with GA4 reports on Magento 2</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container5" x-show="selected == 5">
           <p>
@@ -533,11 +537,11 @@
 
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 6 }"
           @click="selected !== 6 ? selected = 6 : selected = null"
-          w
         >
-          <p>Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</p>
+          <h5>Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container6" x-show="selected == 6">
           <p>
@@ -559,11 +563,11 @@
 
         <div
           class="article__dropdowns-block__item"
+          style="display: flex; align-items: center"
           :class="{'_active' : selected == 7 }"
           @click="selected !== 7 ? selected = 7 : selected = null"
-          w
         >
-          <p>Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2</p>
+          <h5>Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2</h5>
         </div>
         <div class="article__dropdowns-block__content" x-ref="container7" x-show="selected == 7">
           <p>
